# CS-6675-Project

./: Dockerfile  README.md  docker-compose.yml
distributed/: CMakeLists.txt
distributed/client/: client.cpp
distributed/coordinator/: coordinator.cpp
distributed/core/: cracking_engine.h  test_engine.cpp
distributed/proto/: crackstore.proto  test_proto.cpp
distributed/storage/: storage_node.cpp
